--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
 
   web:
     build: .
@@ -33,4 +35,5 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
 
